--- a/src/pages/delivered/delivered.scss
+++ b/src/pages/delivered/delivered.scss
@@ -1,3 +1,9 @@
 page-delivered {
 
+    ion-item {
+        .item-inner {
+            border-bottom-width: 0 !important;
+        }
+    }
+
 }
